# ai-adventure-guide-dth

./: .gitignore  README (1).md  README.md  getting_answers.py
ai_guide/: .dockerignore  .gitignore  README.md  docker-compose.yaml  environment.yml  main.py  pyproject.toml
ai_guide/rag-app/: requirements.txt
ai_guide/rag-app/src/: api.py  rag_pipeline.py
ai_guide/rag-app/src/generation/: generator.py
ai_guide/rag-app/src/preprocessing/: pixtral_parser.py  question_understanding.py
ai_guide/rag-app/src/retrieval/: retriever.py
ai_guide/rag_app/: Dockerfile  main.py  requirements.txt
ai_guide/rag_app/src/: api.py
ai_guide/rag_app/src/generation/: generator.py
ai_guide/rag_app/src/preprocessing/: question_understanding.py
ai_guide/rag_app/src/retrieval/: retriever.py
ai_guide/src/preprocessing/: question_understanding.py
ai_guide/src/retrieval/: build_index.py  retriever.py
ai_guide/telegram-bot/: Dockerfile  bot.py
baselines/: RAG_AI_Guide.ipynb  evaluation_rag_advanced.ipynb  evaluation_rag_baseline.ipynb  image_as_an_input_report.md  image_captioning_pixtral.ipynb  image_encoding.ipynb  image_encoding_siglip.ipynb  labelling_policy_image_input_testing.md  testing_image_input.ipynb  testing_image_input_results.ipynb  validation_data_eda.ipynb
datasets_analysis/: .gitignore  enwikivoyage_dump.ipynb  roots_enwikivoyage_hgf.ipynb  (+2 more)
team-repo/AI guide/: .gitignore  Dockerfile  Dockerfile.bad  RAG_AI_Guide.ipynb  main.py  pyproject.toml
team-repo/AI guide/src/generation/: generator.py
team-repo/AI guide/src/retrieval/: embedder.py
(+72 files in other folders)
