[tool.poetry]
name = "ai-guide"
version = "0.1.0"
description = "RAG pipeline for travel assistant using Wikivoyage dataset"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.14"
mistralai = "1.9.11"
sentence-transformers = "5.2.0"
datasets = "4.4.1"
python-dotenv = "1.0.1"
faiss-cpu = "^1.13.1"
setuptools = "^80.9.0"
ipykernel = "^7.1.0"
ragas = "^0.4.2"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^6.0.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
